[package]
name = "func_reut"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[lib]
crate-type = ["lib"]
name="func_reut"

[profile.release]
opt-level = "z"
lto = "fat"